Helper pour combiner plusieurs endpoints de survie (OS, PFS)  (#82)
* add classes to assertions assert() and assert_class()

* add function survfit_stack()

* add defensive checks

* doc

* test

* improve doc

* respect the order in survlist

* fix for check

* better test for dummy interval-censoring

makes the plot (not shown) better
would require a better simulation though...

* Update _pkgdown.yml

* improve example

* grstat_dev_warn()

* update snaps for ggplot2 v4

un-noticeable differences

* Update test-survfit_stack.R

* update snaps for ggplot2 v4

* import `rlang::local_options()`

---------

Co-authored-by: Dan Chaltiel <15105152+DanChaltiel@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(gr_recist_mapping)
 export(grstat_example)
 export(recist_report_html)
 export(recist_report_xlsx)
+export(survfit_stack)
 export(tibble)
 export(waterfall_plot)
 importFrom(cli,cat_rule)
@@ -170,7 +171,9 @@ importFrom(rlang,has_name)
 importFrom(rlang,int)
 importFrom(rlang,is_empty)
 importFrom(rlang,is_installed)
+importFrom(rlang,is_named)
 importFrom(rlang,is_null)
+importFrom(rlang,local_options)
 importFrom(rlang,set_names)
 importFrom(scales,breaks_width)
 importFrom(scales,label_percent)
