Fix `check_recist()` (#90)
* EDCimport utils for referencing the project

* `recist_report_xxxx()`: inject EDCimport globals (projname & date)

* new argument `check_recist(supp_cols_df)`

* Squashed merge main

* `dir_create(path_dir(output_path))` + minor renaming

---------

Co-authored-by: Dan Chaltiel <15105152+DanChaltiel@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(recist_report_xlsx)
 export(survfit_stack)
 export(tibble)
 export(waterfall_plot)
+importFrom(EDCimport,edc_lookup)
 importFrom(cli,cat_rule)
 importFrom(cli,cli_abort)
 importFrom(cli,cli_inform)
@@ -63,6 +64,7 @@ importFrom(dplyr,pick)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
+importFrom(dplyr,right_join)
 importFrom(dplyr,row_number)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
